fix 🐛: Blog detail page author name alignments

--- a/src/assets/rajvi/responsive.css
+++ b/src/assets/rajvi/responsive.css
@@ -672,7 +672,7 @@
 }
 
 @media screen and (max-width: 374px) {
-    .image-tag-wrapper{ flex-direction: column; align-items: flex-end; gap: 20px  ; }
+    /* .image-tag-wrapper{ flex-direction: column; align-items: flex-end; gap: 20px  ; } */
 }
 
 @media screen and (max-width: 359px) {
